[bugfix] add page padding on tablets

--- a/styles/globals/app.scss
+++ b/styles/globals/app.scss
@@ -32,7 +32,7 @@ body,
   --code-color: #f8f8f2;
 
   // Spacing
-  @include breakpoint(0, 799.98) {
+  @include breakpoint(0, 1199.98) {
     --max-text-width: calc(100vw - (1.6rem * 2));
   }
 
@@ -42,6 +42,7 @@ body,
 
   @include breakpoint(800, 1199.98) {
     --page-padding-sides: 2vw;
+    --max-text-width: 85vw;
   }
 
   @include breakpoint(1200) {
